# xyz

./: .env.template  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  fly.toml  package-lock.json  package.json  wrangler.preview.toml  wrangler.toml
.github/workflows/: deploy.yml  pr-preview-cleanup.yml
assets/: ideology.html  index.html  pgp.html
public/: 404.html  ideology.html  pgp.html
public/assets/: akan72.txt
scripts/: favicon.py
src/: lib.rs  main.rs
