[package]
name = "xyz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
include_dir = "0.7.3"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2" , features = ["fs", "trace"] }
tower-serve-static = "0.1.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"